Fixed text spacing bug on smaller screens

--- a/themes/h4x0r/assets/css/main.css
+++ b/themes/h4x0r/assets/css/main.css
@@ -53,7 +53,6 @@ body {
     Helvetica,
     sans-serif;
   line-height: 1.54;
-  text-align: justify;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
